# llm-relay

./: .dockerignore  .flake8  .gitignore  DEVELOPMENT.md  Dockerfile  QUICKSTART.md  README.md  client-config.yaml  docker-compose.yml  pyproject.toml  server-config.yaml
client/: __init__.py  client.py
llm_relay/: config.py  protocol.py
server/: __init__.py  server.py
tests/: test_config.py  test_protocol.py  test_tunnel.py
