[project]
name = "llm-relay"
version = "0.1.0"
description = "Relay TCP connections (e.g. an LLM backend) over WebSocket"
requires-python = ">=3.13"
dependencies = [
    "websockets>=14.1",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_relay", "client", "server"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
# Tests use pytest fixtures / dynamic helpers; they're exercised by pytest, not
# strict static typing. Strict mode applies to the package source.
exclude = [".venv", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
